<resources>
    <string name="app_name">WebMobileGroupChat</string>
    <string name="btn_join">JOIN</string>
    <string name="btn_send">Send</string>
    <string name="title">(Android WebScokets Chat App)</string>
    <string name="enter_name">Enter your name</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="author_name">yxy</string>
    <string name="author_url">yxy.io</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
